test/dryrun/no_name/mustnothave_compliant_related_obj_1/desired_status.yaml
relatedObjects:
  - object:
      kind: Ingress
      metadata:
        name: '-'
    reason: Resource not found as expected
compliant: Compliant
