test/dryrun/no_name/mustnothave_compliant_related_obj_1/input.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: wrong-1-ingress
spec:
  ingressClassName: wrong-name
  rules:
    - http: 
       paths: 
         - path: /testpath
           pathType: Prefix
           backend:
            service:
              name: test
              port:
                number: 80
