test/dryrun/no_name/mustnothave_compliant_related_obj_1/output.txt
# Status compare:
[32m.compliant: 'Compliant' does match 'Compliant'[0m
[32m.relatedObjects[0] matches[0m
[32m.relatedObjects matches[0m
[32m[1m Expected status matches the actual status [0m[0m

# Diffs:
networking.k8s.io/v1 Ingress default/-:

# Compliance messages:
Compliant; notification - ingresses missing as expected in namespace default
